@@ -1,6 +1,6 @@
 xml.instruct!
 xml.RelationViewerData do 
-  xml.Settings :appTitle=>"#{AppConfig.community_name} Friendships Browser", :WWWLinkTargetFrame=>"_blank", :startID=>"#{application_url}#{@user.login_slug}", 
+  xml.Settings :appTitle=>"#{AppConfig.community_name} Friendships Browser", :WWWLinkTargetFrame=>"_blank", :startID=>"#{home_url}#{@user.login_slug}", 
     :defaultRadius=>"170", :maxRadius=>"240", :contextRadius=>"130" do 
     xml.RelationTypes do 
       xml.DirectedRelation :color=>"0x999999", :lineSize=>"3"
@@ -14,7 +14,7 @@ xml.RelationViewerData do
     @users.each do |user|
       imageUrl = (user.avatar_photo_url(:thumb).eql?('icon_missing_thumb.png') ? '/images/icon_missing_thumb.png' : user.avatar_photo_url(:thumb) )
       xml.Person :tags => "#{user.tags.collect{|t| t.name }.join(", ")}", :dataURL=>"friendships.xml?id=#{user.id}", 
-      :id=>"#{application_url}#{user.login_slug}", :name=>"#{user.login}", :imageURL=>imageUrl, :URL=>"#{application_url}#{user.login_slug}" do
+      :id=>"#{home_url}#{user.login_slug}", :name=>"#{user.login}", :imageURL=>imageUrl, :URL=>"#{home_url}#{user.login_slug}" do
           xml.cdata!( truncate_words( strip_tags(user.description), 50, '...') )
       end
     end
@@ -22,7 +22,7 @@ xml.RelationViewerData do
   
   xml.Relations do 
     @friendships.each do |friendship|
-      xml.DirectedRelation :fromID=>"#{application_url}#{friendship.user.login_slug}", :toID=>"#{application_url}#{friendship.friend.login_slug}"
+      xml.DirectedRelation :fromID=>"#{home_url}#{friendship.user.login_slug}", :toID=>"#{home_url}#{friendship.friend.login_slug}"
     end
   end
 
