@@ -12,4 +12,4 @@ The <%= AppConfig.community_name %> team
 If you don't want to receive e-mails like this one from <%= AppConfig.community_name %>, you can change 
 your e-mail preferences here:
 
-<%= application_url %>/<%= @user.login_slug %>/edit_account
+<%= home_url %>/<%= @user.login_slug %>/edit_account
