@@ -2,7 +2,7 @@ require File.dirname(__FILE__) + '/../test_helper'
 
 class AdminControllerTest < ActionController::TestCase
   fixtures :users, :categories, :roles
-
+  
   def test_should_get_index
     login_as :admin
     get :users
@@ -17,9 +17,22 @@ class AdminControllerTest < ActionController::TestCase
   
   def test_should_not_activate_user
     login_as :quentin
-    put :activate_user
+    users(:quentin).update_attribute('activation_code', 'test')
+    users(:quentin).update_attribute('activated_at', nil)    
+        
+    put :activate_user, :id => 1
+    assert !users(:quentin).active?
     assert_redirected_to login_path
   end
+  
+  def test_should_not_activate_user_js
+    users(:quentin).update_attribute('activation_code', 'test')
+    users(:quentin).update_attribute('activated_at', nil)    
+    
+    get :activate_user, :id => 1, :format => 'js'
+    assert !users(:quentin).active?
+  end
+  
 
   def test_should_activate_user
     users(:quentin).update_attribute('activation_code', 'test')
